# chat-galvanometer

./: App.xaml  App.xaml.cs  ChatGalvanometer.csproj  ChatGalvanometer.sln  Handler.cs  HttpClient.cs  InputDialog.xaml  InputDialog.xaml.cs  LICENSE  LocalHttpListener.cs  MainWindow.xaml  MainWindow.xaml.cs  Program.cs  README.md  ReplayController.cs  SerialCommunicator.cs  Settings.cs  TwitchApiClient.cs  WebSocketClient.cs  authPage.html  handler.cs
.github/workflows/: release.yml
ChatGalvanometer_Hardware/: ChatGalvanometer_Hardware.ino
vibecheck/: .gitignore  README.md  pyproject.toml
vibecheck/src/vibecheck/: train.py
vibecheck/src/vibecheck/data/: training_data.csv
